virtualizacion/kubernetes/ejemplos/pod_with_volume.yml
kind: Pod
apiVersion: v1
metadata:
  name: task-pod
spec:
  volumes:
    - name: task-volume
      persistentVolumeClaim:
       claimName: nombre-recurso
  containers:
    - name: task-container
      image: busybox
      command:
        - sleep
        - infinity
      volumeMounts:
        - mountPath: "/mnt"
          name: task-volume
