virtualizacion/kubernetes/ejemplos/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
  name: grafana
  namespace: grafana
spec:
  ingressClassName: nginx-public
  rules:
  - host: grafana.com
    http:
      paths:
      - backend:
          service:
            name: grafana
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - grafana.com
    secretName: grafana-com
